=== Opus Primus changelog.txt ===
Last revised August 16, 2014
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.3 ==
* Released ...

= Code =
* Added `post-title-link` wrapper class to better manage Post Title output

= CSS =
* Add new typography styles for better reading
* Updated `editor-style.css` to match new typography of theme

= Miscellaneous

/** ------------------------------------------------------------------------- */
== Version 1.2.5 ==
* Released July 2014

= Code =
* Added new method `OpusPrimusNavigation::pagination` for moving between pages of posts
* Added new method `OpusPrimusNavigation::pagination_wrapped` to provide actions hooks before and after the `pagination` method
* Added `antispambot` email protection to author biography email addresses
* Added sanity checks to ensure widgets are active before rendering sidebars
* Added `opus_primus_defaults.php` to replace `$opus_defaults` class
* Added `opus-primus-ignite.php` to reduce clutter in `functions.php`
* Added `opus_image_link_navigation_output` filter hook to provide access to navigation output
* Added `opus_tagline` to default hidden screen options array
* Adjusted the `OpusPrimusStructures::the_loop` and `OpusPrimusStructures::the_loop_archives` to use the `pagination_wrapped` method
* Changed navigation method from `posts_link` to `pagination`
* Changed single view first year of copyright to published year of post/page in `OpusPrimusStructures::copyright` method
* Deprecated `OpusPrimusDefaults` class (file may be removed in a future release)
* Enqueue custom stylesheet in an update safe location `/wp-content/opus-primus-customs/`
* Enqueue custom JavaScript in an update safe location `/wp-content/opus-primus-customs/`
* Refactored all defaults using true/false to use filtered define statements
* Refactored `OpusPrimusTaglines::tagline_create_boxes` to clarify the parameter usage