@@ -1,5 +1,5 @@
 === Opus Primus changelog.txt ===
-Last revised August 16, 2014
+Last revised August 20, 2014
 Please note, the Opus Primus copyright can be found at the end of this file.
 
 == Version 1.3 ==
@@ -9,7 +9,8 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Added `post-title-link` wrapper class to better manage Post Title output
 
 = CSS =
-* Add new typography styles for better reading
+* Added new typography styles for better reading
+* Added styles for the "BNS Login" plugin
 * Updated `editor-style.css` to match new typography of theme
 
 = Miscellaneous
